# comsol_mesh

./: README.md  pyproject.toml
comsol_mesh/: __init__.py  comsol_mesh.py  interpolation.py  meshing.py  parser_eigenanalysis.py  parser_mesh.py  parsers.py  plotting.py
data/: mesh_example_intro.mph
examples/: 01_basic_usage.ipynb
examples/shear_device_example/: cylinder_test_case.ipynb  usage_example.ipynb
tests/: test_meshing.py  test_parser_mesh.py  test_parsers.py
tests/data/: mesh_example_intro.mphtxt
tests/data/comsol_fields/: stanford_meter_surface.csv
tests/data/comsol_meshes/: mesh_example_with_boundary_geom_info.mphtxt  mesh_example_with_complete_geom_info.mphtxt  mesh_example_with_domain_geom_info.mphtxt  mesh_example_with_second_order_info.mphtxt  mesh_example_without_domain_geom_info.mphtxt
